@@ -1,9 +1,9 @@
 package com.backbase.stream.service;
 
-import static com.backbase.dbs.accesscontrol.api.service.v2.model.BatchResponseItemExtended.StatusEnum.HTTP_STATUS_INTERNAL_SERVER_ERROR;
-import static com.backbase.dbs.accesscontrol.api.service.v2.model.BatchResponseItemExtended.StatusEnum.HTTP_STATUS_OK;
-import static com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationAction.ADD;
-import static com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationAction.REMOVE;
+import static com.backbase.dbs.accesscontrol.api.service.v3.model.BatchResponseItemExtended.StatusEnum.HTTP_STATUS_INTERNAL_SERVER_ERROR;
+import static com.backbase.dbs.accesscontrol.api.service.v3.model.BatchResponseItemExtended.StatusEnum.HTTP_STATUS_OK;
+import static com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationAction.ADD;
+import static com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationAction.REMOVE;
 import static com.backbase.stream.LambdaAssertions.assertEqualsTo;
 import static com.backbase.stream.WebClientTestUtils.buildWebResponseExceptionMono;
 import static com.backbase.stream.legalentity.model.LegalEntityStatus.ENABLED;
@@ -16,33 +16,29 @@ import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.springframework.http.HttpStatus.BAD_REQUEST;
 
-import com.backbase.dbs.accesscontrol.api.service.v2.DataGroupApi;
-import com.backbase.dbs.accesscontrol.api.service.v2.DataGroupsApi;
-import com.backbase.dbs.accesscontrol.api.service.v2.FunctionGroupApi;
-import com.backbase.dbs.accesscontrol.api.service.v2.FunctionGroupsApi;
-import com.backbase.dbs.accesscontrol.api.service.v2.ServiceAgreementApi;
-import com.backbase.dbs.accesscontrol.api.service.v2.ServiceAgreementQueryApi;
-import com.backbase.dbs.accesscontrol.api.service.v2.ServiceAgreementsApi;
-import com.backbase.dbs.accesscontrol.api.service.v2.UserQueryApi;
-import com.backbase.dbs.accesscontrol.api.service.v2.UsersApi;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.BatchResponseItemExtended;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.FunctionGroupItem;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.FunctionGroupItem.TypeEnum;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PersistenceApprovalPermissions;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PersistenceApprovalPermissionsGetResponseBody;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationAction;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationAssignUserPermissions;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationDataGroupIdentifier;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationFunctionGroupDataGroup;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationIdentifier;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationParticipantBatchUpdate;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationParticipantPutBody;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationServiceAgreementUserPair;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.PresentationServiceAgreementUsersBatchUpdate;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.ServiceAgreementItem;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.ServiceAgreementParticipantsGetResponseBody;
-import com.backbase.dbs.accesscontrol.api.service.v2.model.ServiceAgreementUsersQuery;
+import com.backbase.dbs.accesscontrol.api.service.v3.DataGroupsApi;
+import com.backbase.dbs.accesscontrol.api.service.v3.FunctionGroupsApi;
+import com.backbase.dbs.accesscontrol.api.service.v3.ServiceAgreementsApi;
+import com.backbase.dbs.accesscontrol.api.service.v3.UsersApi;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.BatchResponseItemExtended;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.FunctionGroupItem;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.FunctionGroupItem.TypeEnum;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PersistenceApprovalPermissions;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PersistenceApprovalPermissionsGetResponseBody;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationAction;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationAssignUserPermissions;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationDataGroupIdentifier;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationFunctionGroupDataGroup;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationIdentifier;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationParticipantBatchUpdate;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationParticipantPutBody;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationServiceAgreementUserPair;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationServiceAgreementUsersBatchUpdate;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.ServiceAgreementItem;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.ServiceAgreementParticipantsGetResponseBody;
+import com.backbase.dbs.accesscontrol.api.service.v3.model.ServiceAgreementUsersQuery;
 import com.backbase.dbs.user.api.service.v2.UserManagementApi;
 import com.backbase.stream.configuration.DeletionProperties;
 import com.backbase.stream.legalentity.model.BaseProductGroup;
@@ -79,6 +75,7 @@ import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpMethod;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
+import org.springframework.web.client.HttpClientErrorException;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
@@ -93,28 +90,13 @@ class AccessGroupServiceTest {
     private UserManagementApi usersApi;
 
     @Mock
-    private UserQueryApi userQueryApi;
-
-    @Mock
     private UsersApi accessControlUsersApi;
-
-    @Mock
-    private DataGroupApi dataGroupApi;
 
     @Mock
     private DataGroupsApi dataGroupsApi;
 
     @Mock
-    private FunctionGroupApi functionGroupApi;
-
-    @Mock
     private FunctionGroupsApi functionGroupsApi;
-
-    @Mock
-    private ServiceAgreementQueryApi serviceAgreementQueryApi;
-
-    @Mock
-    private ServiceAgreementApi serviceAgreementApi;
 
     @Mock
     private ServiceAgreementsApi serviceAgreementsApi;
@@ -130,7 +112,7 @@ class AccessGroupServiceTest {
         final String externalId = "someExternalId";
         final Mono<ServiceAgreementItem> dbsSa = Mono.just(new ServiceAgreementItem().externalId(externalId));
 
-        when(serviceAgreementApi.getServiceAgreementExternalId(eq(externalId))).thenReturn(dbsSa);
+        when(serviceAgreementsApi.getServiceAgreementExternalId(eq(externalId))).thenReturn(dbsSa);
 
         Mono<ServiceAgreement> result = subject.getServiceAgreementByExternalId(externalId);
 
@@ -148,7 +130,7 @@ class AccessGroupServiceTest {
 
         Mono<ServiceAgreementItem> response =
             buildWebResponseExceptionMono(WebClientResponseException.NotFound.class, HttpMethod.GET);
-        when(serviceAgreementApi.getServiceAgreementExternalId(eq(externalId)))
+        when(serviceAgreementsApi.getServiceAgreementExternalId(eq(externalId)))
             .thenReturn(response);
 
 
@@ -185,7 +167,7 @@ class AccessGroupServiceTest {
             .addParticipantsItem(new LegalEntityParticipant().externalId("p2").sharingAccounts(false)
                 .sharingUsers(false).action(LegalEntityParticipant.ActionEnum.ADD));
 
-        when(serviceAgreementApi.putPresentationIngestServiceAgreementParticipants(any()))
+        when(serviceAgreementsApi.putPresentationIngestServiceAgreementParticipants(any()))
             .thenReturn(Flux.concat(
                 Mono.just(new BatchResponseItemExtended().action(ADD).resourceId("p1").status(HTTP_STATUS_OK)),
                 Mono.just(new BatchResponseItemExtended().action(ADD).resourceId("p2").status(HTTP_STATUS_OK))
@@ -195,20 +177,20 @@ class AccessGroupServiceTest {
             .map(u -> new BatchResponseItemExtended().status(HTTP_STATUS_OK)
                 .resourceId(u.getUserProfile().getUser().getExternalId()))
             .collect(Collectors.toList()));
-        when(serviceAgreementApi.putPresentationServiceAgreementUsersBatchUpdate(any())).thenReturn(usersResponse);
+        when(serviceAgreementsApi.putPresentationServiceAgreementUsersBatchUpdate(any())).thenReturn(usersResponse);
 
         when(serviceAgreementsApi.getServiceAgreementParticipants(eq(saInternalId)))
             .thenReturn(Flux.fromIterable(Collections.emptyList()));
 
         Mono<ServiceAgreementUsersQuery> emptyExistingUsersList = Mono.just(new ServiceAgreementUsersQuery());
-        when(serviceAgreementQueryApi.getServiceAgreementUsers(eq(saInternalId))).thenReturn(emptyExistingUsersList);
+        when(serviceAgreementsApi.getServiceAgreementUsers(eq(saInternalId))).thenReturn(emptyExistingUsersList);
 
 
         Mono<ServiceAgreement> result = subject.updateServiceAgreementAssociations(streamTask, serviceAgreement, regularUsers);
         result.block();
 
 
-        InOrder inOrderValidator = inOrder(serviceAgreementApi);
+        InOrder inOrderValidator = inOrder(serviceAgreementsApi);
         thenUpdateParticipantsCall(inOrderValidator, saExternalId, ADD,
             new ExpectedParticipantUpdate("p1", true, true),
             new ExpectedParticipantUpdate("p2", false, false));
@@ -253,7 +235,7 @@ class AccessGroupServiceTest {
             .addParticipantsItem(new LegalEntityParticipant().externalId("p3").sharingAccounts(false)
                 .sharingUsers(false).action(LegalEntityParticipant.ActionEnum.ADD));
 
-        when(serviceAgreementApi.putPresentationIngestServiceAgreementParticipants(any()))
+        when(serviceAgreementsApi.putPresentationIngestServiceAgreementParticipants(any()))
             .thenReturn(Flux.concat(Mono.just(new BatchResponseItemExtended().status(HTTP_STATUS_OK))));
 
         ServiceAgreementParticipantsGetResponseBody existingPar1 =
@@ -268,18 +250,18 @@ class AccessGroupServiceTest {
             .map(u -> new BatchResponseItemExtended().status(HTTP_STATUS_OK)
                 .resourceId(u.getUserProfile().getUser().getExternalId()))
             .collect(Collectors.toList()));
-        when(serviceAgreementApi.putPresentationServiceAgreementUsersBatchUpdate(any())).thenReturn(usersResponse);
+        when(serviceAgreementsApi.putPresentationServiceAgreementUsersBatchUpdate(any())).thenReturn(usersResponse);
 
         Mono<ServiceAgreementUsersQuery> existingUsersList =
             Mono.just(new ServiceAgreementUsersQuery().addUserIdsItem("in_userId1").addUserIdsItem("in_userId3"));
-        when(serviceAgreementQueryApi.getServiceAgreementUsers(eq(saInternalId))).thenReturn(existingUsersList);
+        when(serviceAgreementsApi.getServiceAgreementUsers(eq(saInternalId))).thenReturn(existingUsersList);
 
 
         Mono<ServiceAgreement> result = subject.updateServiceAgreementAssociations(streamTask, serviceAgreement, regularUsers);
         result.block();
 
 
-        InOrder inOrderValidator = inOrder(serviceAgreementApi);
+        InOrder inOrderValidator = inOrder(serviceAgreementsApi);
         thenUpdateParticipantsCall(inOrderValidator, saExternalId, ADD,
             new ExpectedParticipantUpdate("p3", false, false));
         thenUpdateParticipantsCall(inOrderValidator, saExternalId, REMOVE,
@@ -309,7 +291,7 @@ class AccessGroupServiceTest {
             .addParticipantsItem(new LegalEntityParticipant().externalId("p4").sharingAccounts(false)
                 .sharingUsers(false).action(LegalEntityParticipant.ActionEnum.ADD));
 
-        when(serviceAgreementApi.putPresentationIngestServiceAgreementParticipants(any()))
+        when(serviceAgreementsApi.putPresentationIngestServiceAgreementParticipants(any()))
             .thenReturn(Flux.concat(
                 Mono.just(new BatchResponseItemExtended().action(ADD).resourceId("p1")
                     .status(HTTP_STATUS_OK)),
@@ -351,7 +333,8 @@ class AccessGroupServiceTest {
         batchProductGroupTask.setIngestionMode(BatchProductIngestionMode.UPSERT);
 
         Map<BusinessFunctionGroup, List<BaseProductGroup>> baseProductGroupMap = new HashMap<>();
-        baseProductGroupMap.put(new BusinessFunctionGroup().id("business-function-group-id-1"), Collections.emptyList());
+        baseProductGroupMap.put(new BusinessFunctionGroup().id("business-function-group-id-1"),
+            List.of(new BaseProductGroup().internalId("data-group-id")));
 
         Map<User, Map<BusinessFunctionGroup, List<BaseProductGroup>>> usersPermissions = new HashMap<>();
         usersPermissions.put(
@@ -372,21 +355,22 @@ class AccessGroupServiceTest {
                     ).dataGroupIdentifiers(Collections.emptyList()),
                     new PresentationFunctionGroupDataGroup().functionGroupIdentifier(
                         new PresentationIdentifier().idIdentifier("business-function-group-id-1")
-                    ).dataGroupIdentifiers(Collections.emptyList())
+                    ).dataGroupIdentifiers(List.of(new PresentationDataGroupIdentifier().idIdentifier("data-group-id")))
                 ))
         );
 
-        when(functionGroupApi.getFunctionGroups("sa-internal-id"))
+        when(functionGroupsApi.getFunctionGroups("sa-internal-id"))
             .thenReturn(Flux.just(
                 new FunctionGroupItem().id("system-group-id-1").name("SYSTEM_FUNCTION_GROUP").type(FunctionGroupItem.TypeEnum.SYSTEM),
                 new FunctionGroupItem().id("system-group-id-2").name("Full access").type(FunctionGroupItem.TypeEnum.TEMPLATE)
             ));
 
-        when(userQueryApi.getPersistenceApprovalPermissions("user-internal-id", "sa-internal-id"))
+        when(accessControlUsersApi.getPersistenceApprovalPermissions("user-internal-id", "sa-internal-id"))
             .thenReturn(Mono.just(new PersistenceApprovalPermissions().items(Arrays.asList(
                 new PersistenceApprovalPermissionsGetResponseBody().functionGroupId("system-group-id-1").dataGroupIds(Collections.emptyList()),
                 new PersistenceApprovalPermissionsGetResponseBody().functionGroupId("system-group-id-2").dataGroupIds(Collections.emptyList()),
-                new PersistenceApprovalPermissionsGetResponseBody().functionGroupId("system-group-id-3").dataGroupIds(Collections.emptyList())
+                new PersistenceApprovalPermissionsGetResponseBody().functionGroupId("system-group-id-3").dataGroupIds(Collections.emptyList()),
+                new PersistenceApprovalPermissionsGetResponseBody().functionGroupId("business-function-group-id-1").dataGroupIds(List.of("data-group-id"))
             ))));
 
         when(accessControlUsersApi.putAssignUserPermissions(expectedPermissions))
@@ -454,13 +438,13 @@ class AccessGroupServiceTest {
                 ))
         ));
 
-        when(functionGroupApi.getFunctionGroups("sa-internal-id"))
+        when(functionGroupsApi.getFunctionGroups("sa-internal-id"))
             .thenReturn(Flux.just(
                 new FunctionGroupItem().id("system-group-id-1").name("SFG").type(FunctionGroupItem.TypeEnum.SYSTEM),
                 new FunctionGroupItem().id("function-group-id-1").name("Full access").type(FunctionGroupItem.TypeEnum.TEMPLATE)
             ));
 
-        when(userQueryApi.getPersistenceApprovalPermissions("user-internal-id", "sa-internal-id"))
+        when(accessControlUsersApi.getPersistenceApprovalPermissions("user-internal-id", "sa-internal-id"))
             .thenReturn(Mono.just(new PersistenceApprovalPermissions().items(Arrays.asList(
                 new PersistenceApprovalPermissionsGetResponseBody().functionGroupId("function-group-id-1").dataGroupIds(Collections.emptyList()),
                 new PersistenceApprovalPermissionsGetResponseBody().functionGroupId("business-function-group-id-1").dataGroupIds(Collections.singletonList("data-group-1"))
@@ -557,13 +541,13 @@ class AccessGroupServiceTest {
                 ))
         );
 
-        when(functionGroupApi.getFunctionGroups("sa-internal-id"))
+        when(functionGroupsApi.getFunctionGroups("sa-internal-id"))
             .thenReturn(Flux.just(
                 new FunctionGroupItem().id("system-group-id-1").name("SYSTEM_FUNCTION_GROUP").type(FunctionGroupItem.TypeEnum.SYSTEM),
                 new FunctionGroupItem().id("system-group-id-2").name("Full access").type(FunctionGroupItem.TypeEnum.TEMPLATE)
             ));
 
-        when(userQueryApi.getPersistenceApprovalPermissions("user-internal-id", "sa-internal-id"))
+        when(accessControlUsersApi.getPersistenceApprovalPermissions("user-internal-id", "sa-internal-id"))
             .thenReturn(Mono.just(new PersistenceApprovalPermissions().items(Collections.emptyList())));
 
         when(accessControlUsersApi.putAssignUserPermissions(expectedPermissions))
@@ -617,12 +601,12 @@ class AccessGroupServiceTest {
                 ))
         );
 
-        when(functionGroupApi.getFunctionGroups("sa-internal-id"))
+        when(functionGroupsApi.getFunctionGroups("sa-internal-id"))
             .thenReturn(Flux.just(
                 new FunctionGroupItem().id("system-group-id-1").name("SYSTEM_FUNCTION_GROUP").type(FunctionGroupItem.TypeEnum.SYSTEM)
             ));
 
-        when(userQueryApi.getPersistenceApprovalPermissions("user-internal-id", "sa-internal-id"))
+        when(accessControlUsersApi.getPersistenceApprovalPermissions("user-internal-id", "sa-internal-id"))
             .thenReturn(Mono.just(new PersistenceApprovalPermissions().items(Collections.singletonList(
                 new PersistenceApprovalPermissionsGetResponseBody()
                     .functionGroupId("system-group-id-1")
@@ -666,7 +650,7 @@ class AccessGroupServiceTest {
         FunctionGroupItem templateFunctionGroup = new FunctionGroupItem().id("template-group-id-2").name("Full access")
             .type(TypeEnum.TEMPLATE);
 
-        when(functionGroupApi.getFunctionGroups(internalSaId))
+        when(functionGroupsApi.getFunctionGroups(internalSaId))
             .thenReturn(Flux.just(
                 systemFunctionGroup,
                 templateFunctionGroup
@@ -685,14 +669,54 @@ class AccessGroupServiceTest {
         List<PresentationIdentifier> value = captor.getValue();
         assertEquals(templateFunctionGroup.getId(), value.get(0).getIdIdentifier());
     }
+    @Test
+    void testUpdateServiceAgreementItem() {
+        StreamTask streamTask = Mockito.mock(StreamTask.class);
 
+        ServiceAgreement serviceAgreement = new ServiceAgreement();
+        serviceAgreement.setExternalId("external-id");
+        serviceAgreement.setInternalId("internal-id");
+        serviceAgreement.setName("name");
+
+        when(serviceAgreementsApi.putServiceAgreementItem(any(), any())).thenReturn(Mono.empty());
+
+        Mono<ServiceAgreement> resultMono = subject.updateServiceAgreementItem(streamTask, serviceAgreement);
+
+        StepVerifier.create(resultMono)
+                .expectNext(serviceAgreement)
+                .verifyComplete();
+
+        verify(serviceAgreementsApi, times(1))
+                .putServiceAgreementItem(eq("internal-id"), any());
+
+    }
+
+    @Test
+    void testUpdateServiceAgreementItemFailed() {
+        StreamTask streamTask = Mockito.mock(StreamTask.class);
+
+        ServiceAgreement serviceAgreement = new ServiceAgreement();
+        serviceAgreement.setExternalId("external-id");
+        serviceAgreement.setInternalId("internal-id");
+
+        when(serviceAgreementsApi.putServiceAgreementItem(any(), any()))
+                .thenReturn(Mono.error(new HttpClientErrorException(BAD_REQUEST, "Bad request", null, null, null)));
+
+        Mono<ServiceAgreement> resultMono = subject.updateServiceAgreementItem(streamTask, serviceAgreement);
+
+        StepVerifier.create(resultMono)
+                .verifyError(StreamTaskException.class);
+
+        verify(serviceAgreementsApi, times(1))
+                .putServiceAgreementItem(eq("internal-id"), any());
+    }
     private void thenRegularUsersUpdateCall(String expectedSaExId, PresentationAction expectedAction,
                                             String... expectedUserIds) {
         PresentationServiceAgreementUsersBatchUpdate expectedRegularUserAddUpdate =
             new PresentationServiceAgreementUsersBatchUpdate().action(expectedAction)
                 .users(Stream.of(expectedUserIds).map(userId -> new PresentationServiceAgreementUserPair()
                     .externalUserId(userId).externalServiceAgreementId(expectedSaExId)).collect(Collectors.toList()));
-        verify(serviceAgreementApi, times(1))
+        verify(serviceAgreementsApi, times(1))
             .putPresentationServiceAgreementUsersBatchUpdate(eq(expectedRegularUserAddUpdate));
     }
 
@@ -703,7 +727,7 @@ class AccessGroupServiceTest {
                 .externalServiceAgreementId(expectedSaExId).externalParticipantId(ep.exId)
                 .sharingAccounts(ep.sharingAccounts).sharingUsers(ep.sharingAccounts).action(expectedAction))
                 .collect(Collectors.toList()));
-        validator.verify(serviceAgreementApi).putPresentationIngestServiceAgreementParticipants(eq(expectedRequest));
+        validator.verify(serviceAgreementsApi).putPresentationIngestServiceAgreementParticipants(eq(expectedRequest));
     }
 
     private ServiceAgreement buildInputServiceAgreement(String saInternalId, String saExternalId, String description,
